Add generic workaround

--- a/action.yml
+++ b/action.yml
@@ -180,6 +180,16 @@ runs:
         echo "vs_install_dir=$VS_INSTALL_DIR" >> $GITHUB_OUTPUT
         echo "vs_vsdevcmd=$VS_VSDEVCMD" >> $GITHUB_OUTPUT
 
+    - name: (Mac) Workaround for homebrew # https://github.com/rancher-sandbox/lima-and-qemu/pull/20
+        shell: bash
+        if: runner.os == 'macOS'
+        run: |
+            rm -f /usr/local/bin/2to3
+            rm -f /usr/local/bin/idle3
+            rm -f /usr/local/bin/pydoc3
+            rm -f /usr/local/bin/python3
+            rm -f /usr/local/bin/python3-config
+
     - name: Install build tools
       shell: bash
       run: |
