Add 3.12 specific workaround

--- a/action.yml
+++ b/action.yml
@@ -189,6 +189,11 @@ runs:
         rm -f /usr/local/bin/pydoc3
         rm -f /usr/local/bin/python3
         rm -f /usr/local/bin/python3-config
+        rm -f /usr/local/bin/2to3-3.12
+        rm -f /usr/local/bin/idle3.12
+        rm -f /usr/local/bin/pydoc3.12
+        rm -f /usr/local/bin/python3.12
+        rm -f /usr/local/bin/python3.12-config
 
     - name: Install build tools
       shell: bash
