--- a/action.yml
+++ b/action.yml
@@ -195,6 +195,11 @@ runs:
         rm -f /usr/local/bin/pydoc3.12
         rm -f /usr/local/bin/python3.12
         rm -f /usr/local/bin/python3.12-config
+        rm -f /usr/local/bin/2to3-3.11
+        rm -f /usr/local/bin/idle3.11
+        rm -f /usr/local/bin/pydoc3.11
+        rm -f /usr/local/bin/python3.11
+        rm -f /usr/local/bin/python3.11-config
 
     - name: Install build tools
       shell: bash
